@@ -1,0 +1,11 @@
+<?php
+/**
+ * Karakalpak (Qaraqalpaqsha)
+ *
+ * @package MediaWiki
+ * @subpackage Language
+ */
+
+$linkTrail = '/^([a-zʻ`]+)(.*)$/sD';
+
+?>
